result add in static pages

--- a/.htaccess
+++ b/.htaccess
@@ -159,6 +159,7 @@ DirectoryIndex index.php index.html index.htm
     RewriteCond %{REQUEST_URI} !/static-highlights [NC]
     RewriteCond %{REQUEST_URI} !/digitalindia/2016 [NC]
     RewriteCond %{REQUEST_URI} !/education/crowdynews [NC]
+    RewriteCond %{REQUEST_URI} !/education/results [NC]
     RewriteCond %{REQUEST_URI} !/sachin [NC]
     RewriteCond %{REQUEST_URI} !/womansummit/delhi/2015 [NC]
     RewriteCond %{REQUEST_URI} !/womansummit/delhi/2014 [NC]
@@ -278,6 +279,7 @@ DirectoryIndex index.php index.html index.htm
     RewriteRule ^static-highlights/(.*) /staticpages/static-highlights/$1 [L]
     RewriteRule ^digitalindia/2016$ /staticpages/digitalindia/2016/index.html? [L]
     RewriteRule ^digitalindia/2016/(.*) /staticpages/digitalindia/2016/$1 [L]
+    RewriteRule ^education/results$ /staticpages/education/results/index.html? [L]
     RewriteRule ^education/crowdynews$ /staticpages/education/crowdynews/index.html? [L]
     RewriteRule ^education/crowdynews/(.*) /staticpages/education/crowdynews/$1 [L]
     RewriteRule ^sachin$ /staticpages/sachin/index.html? [L]
