update links in static pages

--- a/.htaccess
+++ b/.htaccess
@@ -152,6 +152,7 @@ DirectoryIndex index.php index.html index.htm
     RewriteCond %{REQUEST_URI} !/globalroundtabledelhi [NC]
     RewriteCond %{REQUEST_URI} !/safaigiriawards [NC]
     RewriteCond %{REQUEST_URI} !/state-of-the-states [NC]
+    RewriteCond %{REQUEST_URI} !/state-of-the-states/2013 [NC]
     RewriteCond %{REQUEST_URI} !/distribution [NC]
     RewriteCond %{REQUEST_URI} !/applications [NC]
     RewriteCond %{REQUEST_URI} !/special40 [NC]
@@ -268,7 +269,7 @@ DirectoryIndex index.php index.html index.htm
   RewriteRule ^safaigiriawards$ /staticpages/safaigiriawards/index.html [L]
   RewriteRule ^state-of-the-states/2011$ /staticpages/state-of-the-states/2011/index.jsp [L]
   RewriteRule ^state-of-the-states/2011/(.*) /staticpages/state-of-the-states/2011/$1 [L]
-  RewriteRule ^state-of-the-states/2013$ /staticpages/state-of-the-states/2013/index.jsp [L]
+  RewriteRule ^state-of-the-states/2013$ /staticpages/state-of-the-states/2013/index.html [L]
   RewriteRule ^state-of-the-states/2013/(.*) /staticpages/state-of-the-states/2013/$1 [L]
   RewriteRule ^state-of-the-states/2014$ /staticpages/state-of-the-states/2014/index.jsp [L]
   RewriteRule ^state-of-the-states/2014/(.*) /staticpages/state-of-the-states/2014/$1 [L]
