--- a/.htaccess
+++ b/.htaccess
@@ -197,7 +197,13 @@ DirectoryIndex index.php index.html index.htm
     RewriteCond %{REQUEST_URI} !/petrol [NC]    
     RewriteCond %{REQUEST_URI} !/gudiyas.jsp [NC]
     RewriteCond %{REQUEST_URI} !/frames [NC]  
-
+	####### start saticpages phase 2 #########
+	RewriteCond %{REQUEST_URI} !/aap-arvind-kejriwal-winning-celebration [NC]  
+	RewriteCond %{REQUEST_URI} !/aishwaryarai [NC]  
+	RewriteCond %{REQUEST_URI} !/amitabh-bachchan-70th-birthday [NC]  
+	RewriteCond %{REQUEST_URI} !/amitabh-bachchan-72nd-birthday [NC]  
+	RewriteCond %{REQUEST_URI} !/andhra [NC]  
+	####### start saticpages phase 2 End #########
 
   RewriteRule ^ index.php [L]
 
@@ -355,7 +361,20 @@ DirectoryIndex index.php index.html index.htm
     RewriteRule ^itoday/20050926/(.*) /staticpages/itoday/20050926/$1 [L]
     RewriteRule ^itoday/20061113$ /staticpages/itoday/20061113/index.html? [L]
     RewriteRule ^itoday/20061113/(.*) /staticpages/itoday/20061113/$1 [L]
-
+	
+	####### start saticpages phase 2 #########
+	RewriteRule ^aap-arvind-kejriwal-winning-celebration$ /staticpages/aap-arvind-kejriwal-winning-celebration/index.html? [L]
+    RewriteRule ^aap-arvind-kejriwal-winning-celebration/(.*) /staticpages/aap-arvind-kejriwal-winning-celebration/$1 [L]
+	RewriteRule ^aishwaryarai$ /staticpages/aishwaryarai/index.html? [L]
+    RewriteRule ^aishwaryarai/(.*) /staticpages/aishwaryarai/$1 [L]
+	RewriteRule ^amitabh-bachchan-70th-birthday$ /staticpages/amitabh-bachchan-70th-birthday/index.html? [L]
+    RewriteRule ^amitabh-bachchan-70th-birthday/(.*) /staticpages/amitabh-bachchan-70th-birthday/$1 [L]
+	RewriteRule ^amitabh-bachchan-72nd-birthday$ /staticpages/amitabh-bachchan-72nd-birthday/index.html? [L]
+    RewriteRule ^amitabh-bachchan-72nd-birthday/(.*) /staticpages/amitabh-bachchan-72nd-birthday/$1 [L]
+	RewriteRule ^andhra$ /staticpages/andhra/telangana.jsp? [L]
+    RewriteRule ^andhra/(.*) /staticpages/andhra/$1 [L]
+	####### start saticpages phase 2 End #########
+	
 
   # Rules to correctly serve gzip compressed CSS and JS files.
   # Requires both mod_rewrite and mod_headers to be enabled.
