--- a/.htaccess
+++ b/.htaccess
@@ -224,6 +224,7 @@ DirectoryIndex index.php index.html index.htm
 	RewriteCond %{REQUEST_URI} !/global-roundtable-beijing [NC]  
 	RewriteCond %{REQUEST_URI} !/independence-inflation [NC]  
 	RewriteCond %{REQUEST_URI} !/indian-search [NC]  
+	RewriteCond %{REQUEST_URI} !/indiatodayatautoexpo [NC]  
 	####### start saticpages phase 2 End #########
 
   RewriteRule ^ index.php [L]
@@ -436,6 +437,8 @@ DirectoryIndex index.php index.html index.htm
     RewriteRule ^independence-inflation/(.*) /staticpages/independence-inflation/$1 [L]
 	RewriteRule ^indian-search$ /staticpages/indian-search/index.html? [L]
     RewriteRule ^indian-search/(.*) /staticpages/indian-search/$1 [L]
+	RewriteRule ^indiatodayatautoexpo$ /staticpages/indiatodayatautoexpo/index.html? [L]
+    RewriteRule ^indiatodayatautoexpo/(.*) /staticpages/indiatodayatautoexpo/$1 [L]
 	####### start saticpages phase 2 End #########
 	
 
