add static pages

--- a/.htaccess
+++ b/.htaccess
@@ -240,6 +240,7 @@ DirectoryIndex index.php index.html index.htm
 	RewriteCond %{REQUEST_URI} !/monsoontracker [NC]  
 	RewriteCond %{REQUEST_URI} !/most-explosive-mamata-missiles [NC]  
 	RewriteCond %{REQUEST_URI} !/nokia [NC]  
+	RewriteCond %{REQUEST_URI} !/one-min-twictionary [NC]  
 	####### start saticpages phase 2 End #########
 
   RewriteRule ^ index.php [L]
@@ -484,6 +485,8 @@ DirectoryIndex index.php index.html index.htm
     RewriteRule ^most-explosive-mamata-missiles/(.*) /staticpages/most-explosive-mamata-missiles/$1 [L]
 	RewriteRule ^nokia$ /staticpages/nokia/index.html? [L]
     RewriteRule ^nokia/(.*) /staticpages/nokia/$1 [L]
+	RewriteRule ^one-min-twictionary$ /staticpages/one-min-twictionary/index.html? [L]
+    RewriteRule ^one-min-twictionary/(.*) /staticpages/one-min-twictionary/$1 [L]
 	####### start saticpages phase 2 End #########
 	
 
